--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 application/config/database.php
 application/config/config.php
 application/config/alimessage.php
+application/config/my_sys_config.php
