--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ application/config/database.php
 application/config/config.php
 application/config/alimessage.php
 application/config/my_sys_config.php
+application/controllers/seller/Test.php
+static/captcha/
