增加忘记密码,修改密码功能增加60秒倒计时获取短信功能

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ application/config/alimessage.php
 application/config/my_sys_config.php
 application/controllers/seller/Test.php
 static/captcha/
+checkin.php
+nbproject/
+phpinfo.php
+test/
+static/article/
